Archive2/bd/e29725bcc77654/output
main.cpp:38:22: error: no matching constructor for initialization of 'Vector_container'
    Vector_container vc{10}; //{10, 9, 8, 7, 6, 5, 4, 3, 2, 1};
                     ^ ~~~~
main.cpp:21:7: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'int' to 'const Vector_container &' for 1st argument
class Vector_container:public Container{
      ^
main.cpp:21:7: note: candidate constructor (the implicit default constructor) not viable: requires 0 arguments, but 1 was provided
1 error generated.
